# undefined-behavior

./: Cargo.toml  DESCRIPTION.md  Dockerfile  LICENSE  README.md  build.rs  challenge.yaml  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: docker.yaml
backend/: Dockerfile
docker/: entrypoint.sh
docker/flags/: flag.txt
entity/: Cargo.toml
entity/src/: user.rs
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  unocss.config.ts  vite.config.ts
frontend/src/lib/: Header.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte  +page.ts
frontend/src/routes/admin/: +page.svelte
migration/: Cargo.toml
migration/src/: lib.rs  m20231101_000001_create_users.rs
src/: errors.rs  main.rs
src/handlers/: mod.rs
