[workspace]
members = [".", "./migration", "./entity"]

[package]
name = "undefined-behavior"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.20", features = [] }
serde = { version = "1.0.190", features = ["derive"] }

# Logging
tracing = "0.1.34"
tracing-subscriber = "0.3.17"

# SQL
sea-orm = { version = "0.12.4", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
migration = { path = "./migration" }
entity = { path = "./entity" }
thiserror = "1.0.50"
serde_json = "1.0.108"
