[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.4", features = ["with-time"]}
serde = { version = "1.0.190", features = ["derive"] }
time = "0.3.30"